# Expense_Tracker

./: .gitignore  DATABASE_GUIDE.md  DEPLOYMENT_GUIDE.md  README-PYTHON-BACKEND.md  README.md  SETUP.md  package-lock.json  package.json  render.yaml  start-app.py  tailwind.config.ts
backend/: README.md  env.example  main.py  pyproject.toml  requirements.txt  run.py  test_database.py
backend/services/: ai_service.py  database_service.py  expense_parser_service.py  spending_analysis_service.py  transcription_service.py
docs/: blueprint.md
src/app/: globals.css  layout.tsx
src/app/(app)/: layout.tsx
src/app/(app)/ask/: page.tsx
src/app/(app)/categories/: page.tsx
src/app/(app)/dashboard/: page.tsx
src/app/(app)/transactions/: page.tsx
src/components/: add-expense-sheet.tsx  create-category-dialog.tsx  month-picker.tsx  voice-recorder.tsx
src/lib/: actions-python.ts  config.ts  store.ts  types.ts
